fix(style): add text-align to footer

--- a/src/ui-components/PageFooter/PageFooter.css
+++ b/src/ui-components/PageFooter/PageFooter.css
@@ -5,6 +5,7 @@
   gap: 1em;
   font-style: italic;
   font-weight: 600;
+  text-align: center;
 }
 
 #footer-container > span,
